Tab switching for system pages (WIP)
Former-commit-id: 8c90d7d70c0ab521d4264fab981ca17a8edaa195

--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingSystem.scala.html
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingSystem.scala.html
@@ -86,11 +86,7 @@
 							<h2><b>Select Machine</b></h2>
 						</div>
 						<div class="box-content">
-							<ul class="nav tab-menu nav-tabs" id="myTab">
-								<li class="active"><a href="#machine1">Machine 1</a></li>
-								<li><a href="#machine2">Machine 2</a></li>
-								<li><a href="#machine3">Machine 3</a></li>
-							</ul>
+							<ul class="nav tab-menu nav-tabs" id="systemTab"></ul>
 
 							<!--Start System Tab -->
 							<div id="myTabContent" class="tab-content">
@@ -286,6 +282,7 @@
 		<script>
             $(document).ready(function(){
 				renderSystemPage();
+				renderMultipleTabs();
             });
         </script>
 
