--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingModel.scala.html
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingModel.scala.html
@@ -129,11 +129,11 @@
 
 					<div class="box">
 						<div class="box-header">
-							<h2><b>Mean Magnitudes</b></h2>
+							<h2><b>Mean Magnitude Update Ratios - Log10</b></h2>
 						</div>
 						<div class="box-content">
 							<div id="meanmag"  class="center" style="height:300px;" ></div>
-							<p id="hoverdata"><b>Magnitude:</b> <span id="y">0</span>, <b>Iteration:</b> <span id="x">0</span></p>
+							<p id="hoverdata"><b>Magnitude:</b> <span id="yMeanMagnitudes">0</span>, <b>Iteration:</b> <span id="xMeanMagnitudes">0</span></p>
 						</div>
 					</div>
 
@@ -143,7 +143,7 @@
 						</div>
 						<div class="box-content">
 							<div id="activations"  class="center" style="height:300px;" ></div>
-							<p id="hoverdata"><b>Activation:</b> <span id="y">0</span>, <b>Iteration:</b> <span id="x">0</span></p>
+							<p id="hoverdata"><b>Activation:</b> <span id="yActivations">0</span>, <b>Iteration:</b> <span id="xActivations">0</span></p>
 						</div>
 					</div>
 
@@ -153,7 +153,7 @@
 						</div>
 						<div class="box-content">
 							<div id="learningrate"  class="center" style="height:300px;" ></div>
-							<p id="hoverdata"><b>Learning Rate:</b> <span id="y">0</span>, <b>Iteration:</b> <span id="x">0</span></p>
+							<p id="hoverdata"><b>Learning Rate:</b> <span id="yLearningRate">0</span>, <b>Iteration:</b> <span id="xLearningRate">0</span></p>
 						</div>
 					</div>
 
