More model chart fixes: tooltip, scaling, infer keys/param names (instead of hard-coding)
Former-commit-id: c9f9e8e84c15664da69f5ec4c21d69526f6a1b2a [formerly ce3393f15e0df4b8b4771848b6fc6f101ad79af8]
Former-commit-id: b7bf6d62563f3384a500184019686d9dff1e029a

--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingModel.scala.html
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingModel.scala.html
@@ -133,7 +133,7 @@
 						</div>
 						<div class="box-content">
 							<div id="meanmag"  class="center" style="height:300px;" ></div>
-							<p id="hoverdata"><b>Magnitude:</b> <span id="yMeanMagnitudes">0</span>, <b>Iteration:</b> <span id="xMeanMagnitudes">0</span></p>
+							<p id="hoverdata"><b>Log10 Ratio:</b> <span id="yMeanMagnitudes">0</span>, <b>Iteration:</b> <span id="xMeanMagnitudes">0</span></p>
 						</div>
 					</div>
 
