System page tabbing functionality
Former-commit-id: b37508ecc6087f86168e283b4312980cf1e56578

--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingSystem.scala.html
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingSystem.scala.html
@@ -90,7 +90,7 @@
 
 							<!--Start System Tab -->
 							<div id="myTabContent" class="tab-content">
-								<div class="tab-pane active" id="machine1">
+								<div class="tab-pane active">
 
 									<!-- JVM Memory Utilization Chart -->
 									<div class="row-fluid">
@@ -226,17 +226,6 @@
 									</div>
 								</div>
 								<!-- End System Tab -->
-								<div class="tab-pane" id="machine2">
-									<p>
-										Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-									</p>
-								</div>
-
-								<div class="tab-pane" id="machine3">
-									<p>
-										Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
-									</p>
-								</div>
 							</div>
 						</div>
 					</div>
@@ -282,7 +271,8 @@
 		<script>
             $(document).ready(function(){
 				renderSystemPage();
-				renderMultipleTabs();
+				renderTabs();
+				selectMachine();
             });
         </script>
 
