Feed data into histograms
Former-commit-id: f9dae16a089621dc87c8e3854990004f1a3a3899

--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingModel.scala.html
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingModel.scala.html
@@ -4,7 +4,7 @@
 <head>
 
 	<meta charset="utf-8">
-	<title>System Page Demo</title>
+	<title>DL4J Training UI</title>
 	<!-- start: Mobile Specific -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- end: Mobile Specific -->
@@ -163,17 +163,15 @@
 						</div>
 						<div class="box-content">
 							<div id="parametershistogram" class="center" style="height:300px;"></div>
+						</div>
+					</div>
 
-							<p class="stackControls center">
-								<input class="btn" type="button" value="With stacking">
-								<input class="btn" type="button" value="Without stacking">
-							</p>
-
-							<p class="graphControls center">
-								<input class="btn-primary" type="button" value="Bars">
-								<input class="btn-primary" type="button" value="Lines">
-								<input class="btn-primary" type="button" value="Lines with steps">
-							</p>
+					<div class="box">
+						<div class="box-header">
+							<h2><b>Updates Histogram</b></h2>
+						</div>
+						<div class="box-content">
+							<div id="updateshistogram" class="center" style="height:300px;"></div>
 						</div>
 					</div>
 
