Add language selection to all pages
Former-commit-id: 619d2cdd47831293483cbea57de219e8ae072a56 [formerly 797d318642b299088dd00d14a0c31f5860ef3944]
Former-commit-id: c42a59cddf586150c909924e798d223ad33b927d

--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingOverview.scala.html
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingOverview.scala.html
@@ -58,12 +58,12 @@
                             <li>
                                 <a class="dropmenu" href="javascript:void(0);"><i class="icon-folder-close-alt"></i><span class="hidden-tablet">@i18n.getMessage("train.nav.language")</span></a>
                                 <ul>
-                                    <li><a class="submenu" href="javascript:void(0);"><i class="icon-file-alt"></i><span class="hidden-tablet"> English</span></a></li>
-                                    <li><a class="submenu" href="javascript:void(0);"><i class="icon-file-alt"></i><span class="hidden-tablet"> 日本語</span></a></li>
-                                    <li><a class="submenu" href="javascript:void(0);"><i class="icon-file-alt"></i><span class="hidden-tablet"> 中文</span></a></li>
-                                    <li><a class="submenu" href="javascript:void(0);"><i class="icon-file-alt"></i><span class="hidden-tablet"> 한글</span></a></li>
-                                    <li><a class="submenu" href="javascript:void(0);"><i class="icon-file-alt"></i><span class="hidden-tablet"> русский</span></a></li>
-                                    <li><a class="submenu" href="javascript:void(0);"><i class="icon-file-alt"></i><span class="hidden-tablet"> український</span></a></li>
+                                    <li><a class="submenu" href="javascript:void(0);" onclick="languageSelect('en','overview')"><i class="icon-file-alt"></i><span class="hidden-tablet"> English</span></a></li>
+                                    <li><a class="submenu" href="javascript:void(0);" onclick="languageSelect('ja','overview')"><i class="icon-file-alt"></i><span class="hidden-tablet"> 日本語</span></a></li>
+                                    <li><a class="submenu" href="javascript:void(0);" onclick="languageSelect('zh','overview')"><i class="icon-file-alt"></i><span class="hidden-tablet"> 中文</span></a></li>
+                                    <li><a class="submenu" href="javascript:void(0);" onclick="languageSelect('ko','overview')"><i class="icon-file-alt"></i><span class="hidden-tablet"> 한글</span></a></li>
+                                    <li><a class="submenu" href="javascript:void(0);" onclick="languageSelect('ru','overview')"><i class="icon-file-alt"></i><span class="hidden-tablet"> русский</span></a></li>
+                                    <li><a class="submenu" href="javascript:void(0);" onclick="languageSelect('uk','overview')"><i class="icon-file-alt"></i><span class="hidden-tablet"> український</span></a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -211,6 +211,7 @@
             <script src="/assets/js/counter.js"></script>
             <script src="/assets/js/retina.js"></script>
             <script src="/assets/js/train/overview.js"></script>    <!-- Charts and tables are generated here! -->
+            <script src="/assets/js/train/train.js"></script>   <!-- Common (lang selection, etc) -->
 
             <!-- Execute once on page load -->
             <script>
